--- a/ejemploMinTic/app/src/main/res/values/strings.xml
+++ b/ejemploMinTic/app/src/main/res/values/strings.xml
@@ -2,11 +2,13 @@
     <string name="app_name">ejemploMinTic</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
+    <string name="login_fragment_label">Login</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="txt_login_fragment">Por favor ingresa sus credenciales</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="logo_app_desc">logo_app</string>
+    <string name="by_andres">by_andres</string>
 </resources>
